# Lexo

./: .env.example  .gitignore  README.md  build.sh  pyproject.toml  render.yaml  requirements.txt  run.sh  vercel.json
app/: __init__.py  ai.py  auth.py  auth_db.py  auth_routes.py  badge_service.py  book_routes.py  cover_backfill.py  cover_proxy.py  cover_service.py  cover_storage.py  cover_store.py  deps.py  email_service.py  extract.py  http_client.py  library_routes.py  library_store.py  main.py  oauth.py  reader.py  reader_models.py  reader_routes.py  reader_test.py  reading_paths_store.py  review_routes.py  supabase_client.py  supabase_rest.py  user_routes.py  user_store.py
scripts/: backfill_covers.py  debug_cover_rows.py
static/: ai-companion.html  book-details.html  challenges.html  community.html  discovery.html  forgot-password.html  home.html  landing.html  library.html  login.html  profile.html  quiz.js  reader-journey.html  reader-quiz.html  reading-paths.html  reset-password.html  settings.html  signup.html  styles.css  verify-email-pending.html  verify-email.html  want-to-read.html
static/css/: design-system.css  editorial.css  tokens.css
static/js/: api.js  auth-ui.js  auth.js  badge-catalog.js  badge-engine.js  book-card.js  book-cover.js  book-details.js  book-discovery.js  challenges.js  community.js  genres.js  home.js  import.js  library-page.js  library.js  perf.js  reader-dna-state.js  reader-journey.js  reading-path-completion.js  reading-path-passport.js  reading-paths.js  settings.js  sidebar.js  ui.js  (+1 more)
supabase/: schema.sql
(+7 files in other folders)
