[project]
name = "bookmindai"
version = "0.1.0"
description = "AI-powered reading companion with personalized discovery and library tracking."
requires-python = "==3.12.*"
dependencies = [
    "fastapi==0.115.6",
    "uvicorn[standard]==0.34.0",
    "python-multipart==0.0.20",
    "pydantic==2.10.4",
    "python-dotenv==1.0.1",
    "pypdf==5.1.0",
    "httpx==0.28.1",
    "openai==1.60.2",
    "PyJWT==2.10.1",
    "bcrypt==4.2.1",
    "email-validator==2.2.0",
    "Pillow==11.1.0",
]

[tool.uv]
package = false

[tool.vercel]
entrypoint = "app.main:app"
